# ai-diagram-generator

./: .gitignore  AI_CHAT_FEATURE.md  CHANGES.md  OPTIMIZATION_RECOMMENDATIONS.md  OPTIMIZATION_SUMMARY.md  PHASE1_IMPLEMENTATION_PLAN.md  PROJECT_AUDIT_REPORT.md  PROJECT_SUMMARY.md  QUICK_OPTIMIZATION_CHECKLIST.md  README.md  REFACTORING_GUIDE.md  docker-compose.yml  setup-and-start.ps1
.claude/: settings.local.json
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml  test_deepseek.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_diagram_format.py
backend/app/: main.py
backend/app/api/: routes.py  routes_backup.py
backend/app/core/: config.py  database.py  redis.py
backend/app/models/: diagram.py
backend/app/schemas/: diagram.py
backend/app/services/: export_service.py
backend/app/services/ai/: claude_service.py  deepseek_service.py  drawio_converter.py  openai_service.py
backend/tests/: conftest.py  test_api.py  test_models.py
docs/: COMPLETION_SUMMARY.md  DEEPSEEK_INTEGRATION.md  DEEPSEEK_QUICK_REFERENCE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  FRONTEND_API_KEY_CONFIG.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_CHECKLIST.md  NEW_FEATURES_SUMMARY.md  PROJECT_CHECKLIST.md  QUICKSTART.md  QUICK_START_API_CONFIG.md  TESTING_GUIDE.md
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useKeyboardShortcuts.ts
scripts/: deploy.sh  quick-start.sh  setup.sh  start.bat
(+27 files in other folders)
